--- a/Proiect_shop/Pages/Shared/_Layout.cshtml
+++ b/Proiect_shop/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Products/Index">Products</a>
-                        
+
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Brands/Index">Brands</a>
@@ -28,7 +28,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Categories/Index">Categories</a>
                         </li>
+
+
                     </ul>
+
+
+                </div>
+                <div>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Login/Index" style="float:right;">Logout</a>
                 </div>
             </div>
         </nav>
